/*
Copyright 2020 The Magma Authors.

This source code is licensed under the BSD-style license found in the
LICENSE file in the root directory of this source tree.

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

import "orc8r/protos/common.proto";
import "lte/protos/subscriberdb.proto";
import "lte/protos/oai/mme_nas_state.proto";
import "lte/protos/oai/std_3gpp_types.proto";


package magma.feg;
option go_package = "magma/feg/cloud/go/protos";


service S8Proxy {
    rpc CreateSession (CreateSessionRequestPgw) returns(CreateSessionResponsePgw){}
    rpc ModifyBearer (ModifyBearerRequestPgw) returns(ModifyBearerResponsePgw) {}
    rpc DeleteSession (DeleteSessionRequestPgw) returns(DeleteSessionResponsePgw) {}
    rpc SendEcho(magma.orc8r.Void) returns(EchoResponse) {}
}

// from
// https://sites.google.com/site/amitsciscozone/home/lte-notes/default-bearer-setup
message CreateSessionRequestPgw {
  lte.SubscriberID sid = 1;
  string MSISDN = 2;
  string MEI = 3;
  string MCC = 4; //serving network
  string MNC = 5; //serving_network
  uint32 rat_type = 6;
  bytes indication_flag = 7;
  uint32 bearer_id = 8;

  // user plane data
  uint32 user_plane_teid = 9;
  string s5s8ip4_user_pane = 10;
  string s5s8ip6_user_pane = 11;

  string apn = 14;
  string selection_mode = 16;
  uint32 pdn_type = 18;
  string pdn_address_allocation = 20;
  uint32 apn_restriction = 30;
  uint32 ambr_up = 35;
  uint32 ambr_down = 37;
  string uli = 40;
}

message PdnAddressAllocation{
    uint32 pdn_type = 1;
    string ipv4_address = 2;
    string ipv6_prefix = 3;
    string ipv6_address = 4;
}

message CreateSessionResponsePgw {
    lte.oai.Fteid Fteid = 2;
    PdnAddressAllocation pdn_address_allocation = 3;
    uint32 apn_restriction = 4;
    lte.oai.BearerContext bearer_context = 8;
}

message ModifyBearerRequestPgw {

}

message ModifyBearerResponsePgw {

}

message DeleteSessionRequestPgw {

}

message DeleteSessionResponsePgw{

}

message EchoResponse{

}
